plang/testing/logs/false-incorrect/24/program24.p.p
vZLz (XczJq) (SEyxZ).


izXp (u (y5b BLS (d (BDTNP)))) (n t3Iqt P) (ICs) :- ((zac (U33X0)); lyX9 (m x43z6 (LKHR)) (dG1A v) T6wM (Ah9); xhjQ (o ImBo) Jq3EB PYR (g nkGhg (T7R)); ((tHiOD (DiPRM) qv wjL))), v zYER, t1Kj (A) (iHzj9 TTee) (rPDL (wI w M03qM) (YZ) (Hd)); acltq uge.
w7 (IKE) mW zV V :- viObw (Fe) yH oh (nOqtN (N7) (Yd)); (zWQz (bb72y (QyMD))), uTVM wW (dl IcLVn E) R67Uz, qC KC5g (ays9 (eWu PhKdy (pwm SaR39) Gp) Pr6S l6AM), abYzK; bHq0 (xbn ta (Ilro5) clDbA (YK)) (e g Y9uQQ) (A) u.


v7 (z (SY3) (uarrM (bcyv WmA8m E0iy rQi4) (ERtJS) Y Q2f) X) SrXy (eG (C) LG eGzCl (rfw hG9Ke)) x53D :- wuOe6 rP.


fQtiB (tu FpcZ rR) :- (id; wX7 SW (la6 (bYOx (Rd)) (m1B (fx0Tr R7))); w, (uCpM5 gW4N dWv0 Juli QT; v); zo (R3oTS) iNoa).
f (jM (hbqH)) J6rm NMlvQ.

? hT (KRkJC) sMw (lmO r (K) VHn) (Fgi).


